csrsto & Hehch Reportes de Utilidades & Mejoras

--- a/web/template/HomeTemplate.xhtml
+++ b/web/template/HomeTemplate.xhtml
@@ -27,7 +27,7 @@
             <span>
                 <h:form>
                     <p:outputLabel value="Activo: " style="color: #045491"/>
-                    <p:outputLabel value="#{interfaceUsuarioBean.usuario.userEmp} " style="color: black"/>
+                    <p:outputLabel value="#{interfaceUsuarioBean.usuario.userEmp} " style="color: coral"/>
                     <p:commandButton id="btnSalir" value="Salir" action="#{interfaceUsuarioBean.finalizarSesion()}"/>
                 </h:form>
             </span>
