--- a/web/views/Compra/Compra.xhtml
+++ b/web/views/Compra/Compra.xhtml
@@ -58,7 +58,7 @@
                         </p:layout>
                         <h:panelGrid id="gridBuscarProducto" columns="3">
                             <p:outputLabel value="Código de Producto: " style="font-size: 16px; font-weight: bold"/>
-                            <p:inputText id="inpTexProducto" value="#{compraBean.codigoProducto}" size="27" placeholder="Digite Código Producto" disabled="#{!compraBean.enabled}" style="text-align: center; text-transform: uppercase">
+                            <p:inputText id="inpTexProducto" value="#{compraBean.codigoProducto}" size="27" placeholder="Código Producto" disabled="#{!compraBean.enabled}" style="text-align: center; text-transform: uppercase">
                                 <p:ajax event="keyup" delay="500" listener="#{compraBean.mostrarDatosCantidadProductoPorCodigo()}" update=":formFacturaCompra:gridBuscarProducto"/>
                             </p:inputText>
                             <p:commandButton value="+" oncomplete="PF('dialogDatosProductos').show();" update=":formFacturaCompra:dialogProductos" disabled="#{!compraBean.enabled}"/>
