--- a/web/views/HomePage/HomePage.xhtml
+++ b/web/views/HomePage/HomePage.xhtml
@@ -9,7 +9,7 @@
 
             <ui:define name="content">
                 <h1></h1>
-                <h3 style="color: black">.Green Apps.</h3>
+                <h3 style="color: #045491">Green Apps</h3>
             </ui:define>
 
         </ui:composition>
