--- a/web/reportes/reporteUtilidades.jrxml
+++ b/web/reportes/reporteUtilidades.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ed150658-2dd9-4dfe-9a47-8996109db19e">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="8" bottomMargin="20" uuid="ed150658-2dd9-4dfe-9a47-8996109db19e">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -18,7 +18,7 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 	<field name="codigoProducto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="valorCompraProducto" class="java.lang.Float">
+	<field name="valorCompraProducto" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="idDetalleVenta" class="java.lang.Integer">
@@ -33,7 +33,7 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 	<field name="nombreProducto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="valorVentaProducto" class="java.lang.Float">
+	<field name="valorVentaProducto" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="IVA" class="java.lang.Double">
@@ -48,142 +48,174 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 	<field name="totalDetalleVenta" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<variable name="utilidad" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{valorVentaProducto}*$F{unidadesVendidas}-$F{valorCompraProducto}*$F{unidadesVendidas}-$F{valorVentaProducto}*0.19*$F{IVA}*$F{unidadesVendidas}-$F{valorCompraProducto}*0.19*$F{IVA}*$F{unidadesVendidas}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
+	<variable name="utilidadUnitaria" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{valorVentaProducto}*$F{unidadesVendidas}-$F{valorCompraProducto}*$F{unidadesVendidas}-$F{valorVentaProducto}*0.19*$F{IVA}*$F{unidadesVendidas}-$F{valorCompraProducto}*0.19*$F{IVA}*$F{unidadesVendidas}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
+	<variable name="iva" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{IVA}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
+	<variable name="ivaCompra" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{valorCompraProducto}*0.19*$F{IVA}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
+	<variable name="totalIvaCompra" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$V{ivaCompra}*$F{unidadesVendidas}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
+	<variable name="ivaVenta" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{valorVentaProducto}*0.19*$F{IVA}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
+	<variable name="totalIvaVenta" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$V{ivaVenta}*$F{unidadesVendidas}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
+	</variable>
 	<variable name="totalVenta" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{valorVentaProducto}*$F{unidadesVendidas}]]></variableExpression>
 	</variable>
 	<variable name="totalCompra" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{valorCompraProducto}*$F{unidadesVendidas}]]></variableExpression>
 	</variable>
-	<variable name="utilidad" class="java.lang.Double">
-		<variableExpression><![CDATA[($V{totalVenta}-$V{totalIvaVenta})-($V{totalCompra}-$V{totalIvaCompra})]]></variableExpression>
+	<variable name="valorCompraPdcto" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{valorCompraProducto}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
 	</variable>
-	<variable name="utilidadUnitaria" class="java.lang.Float">
-		<variableExpression><![CDATA[($F{valorVentaProducto}-$F{valorCompraProducto})*$F{unidadesVendidas}-$F{totalIva}]]></variableExpression>
-	</variable>
-	<variable name="totalIvaVenta" class="java.lang.Double" calculation="Sum">
-		<variableExpression><![CDATA[$F{totalIva}*$F{unidadesVendidas}]]></variableExpression>
-	</variable>
-	<variable name="ivaCompra" class="java.lang.Double">
-		<variableExpression><![CDATA[$F{valorCompraProducto}*0.19*$F{IVA}]]></variableExpression>
-	</variable>
-	<variable name="totalIvaCompra" class="java.lang.Double" calculation="Sum">
-		<variableExpression><![CDATA[$V{ivaCompra}*$F{unidadesVendidas}]]></variableExpression>
+	<variable name="valorVentaPdcto" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{valorVentaProducto}]]></variableExpression>
+		<initialValueExpression><![CDATA[0.0]]></initialValueExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="47" splitType="Stretch">
+		<band height="69" splitType="Stretch">
+			<image>
+				<reportElement x="223" y="2" width="86" height="67" uuid="8cefeba3-e068-4f89-afcb-607c683cb175"/>
+				<imageExpression><![CDATA["/Users/csrsto/Documents/feed!back/GreenApps/GreenApps/web/imgs/GreenApps.jpg"]]></imageExpression>
+			</image>
 			<staticText>
-				<reportElement x="155" y="7" width="247" height="34" uuid="d4b502f4-361a-4eca-9d31-a75a083d1948"/>
+				<reportElement x="352" y="24" width="188" height="20" uuid="62032622-326f-4851-8bcd-ec7f1c7fd581"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="24" isBold="true"/>
+					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[MOTO 10 RACING]]></text>
+				<text><![CDATA[REPORTE DE UTILIDADES]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="21" y="24" width="147" height="20" uuid="1937862c-f165-4018-bd92-2d290e52e82f"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ALMACEN M10R]]></text>
 			</staticText>
 		</band>
 	</title>
 	<columnHeader>
-		<band height="26" splitType="Stretch">
+		<band height="22" splitType="Stretch">
 			<staticText>
-				<reportElement x="2" y="5" width="93" height="20" uuid="ec0293b7-81bf-4b4b-a917-37999f6dcbf8"/>
+				<reportElement x="-19" y="2" width="93" height="20" uuid="ec0293b7-81bf-4b4b-a917-37999f6dcbf8"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="10" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Código Producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="195" y="5" width="78" height="20" uuid="3a022e7b-d8c9-475d-bece-5ef0d2ef39cd"/>
+				<reportElement x="171" y="2" width="78" height="20" uuid="3a022e7b-d8c9-475d-bece-5ef0d2ef39cd"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="10" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Vlr Cpa Pdcto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="491" y="5" width="64" height="20" uuid="0fec8128-6419-4370-9a66-59724cee24cc"/>
+				<reportElement x="495" y="2" width="64" height="20" uuid="0fec8128-6419-4370-9a66-59724cee24cc"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="10" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Utilidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="330" y="5" width="77" height="20" uuid="55a8a533-718b-471c-a300-b21b999ab4cb"/>
+				<reportElement x="306" y="2" width="77" height="20" uuid="55a8a533-718b-471c-a300-b21b999ab4cb"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Vlr Vta Pdcto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="95" y="5" width="100" height="20" uuid="63fc591a-7072-441d-a602-52da51ce885c"/>
+				<reportElement x="74" y="2" width="100" height="20" uuid="63fc591a-7072-441d-a602-52da51ce885c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="258" y="5" width="87" height="20" uuid="d53705ef-3541-4f42-bb2e-1f26cca9ee60"/>
+				<reportElement x="237" y="2" width="87" height="20" uuid="d53705ef-3541-4f42-bb2e-1f26cca9ee60"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[IVA Cpa]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="385" y="5" width="87" height="20" uuid="faee8f95-09d6-4470-a8d6-16987c1cc176"/>
+				<reportElement x="364" y="2" width="87" height="20" uuid="faee8f95-09d6-4470-a8d6-16987c1cc176"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[IVA Vta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="444" y="5" width="64" height="20" uuid="fec7ab85-1de8-48bd-b252-46b7a3862755"/>
+				<reportElement x="434" y="2" width="64" height="20" uuid="fec7ab85-1de8-48bd-b252-46b7a3862755"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="10" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Unidades]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="25" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<textField>
-				<reportElement x="13" y="4" width="63" height="20" uuid="772ba271-fb96-4fed-b8ae-c0181fdb13cb"/>
+				<reportElement x="-8" y="2" width="63" height="20" uuid="772ba271-fb96-4fed-b8ae-c0181fdb13cb"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{codigoProducto}]]></textFieldExpression>
 			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="187" y="4" width="90" height="20" uuid="519f1d5b-47ec-404f-ac00-05e16c25fdf0"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{valorCompraProducto}]]></textFieldExpression>
-			</textField>
 			<textField>
-				<reportElement x="94" y="4" width="100" height="20" uuid="85302d2a-b3af-4188-b293-0b47a9ae1484"/>
+				<reportElement x="73" y="2" width="100" height="20" uuid="85302d2a-b3af-4188-b293-0b47a9ae1484"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{nombreProducto}]]></textFieldExpression>
 			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="313" y="4" width="97" height="20" uuid="35c4a635-453f-4b8f-adff-44a2912a6ace"/>
+			<textField pattern="$#,##0">
+				<reportElement x="159" y="2" width="100" height="20" uuid="fdc0c806-f5f7-44f6-a232-c9f24ddf6ecb"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{valorVentaProducto}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{valorCompraPdcto}]]></textFieldExpression>
 			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="380" y="4" width="100" height="20" uuid="0d662ce6-f9bd-47d5-9a7b-9df4fd537329"/>
+			<textField pattern="$#,##0">
+				<reportElement x="300" y="2" width="91" height="20" uuid="7fbb9ae8-de12-4ceb-ac5d-e71b67572fd1"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{totalIva}/$F{unidadesVendidas}]]></textFieldExpression>
-			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="470" y="4" width="100" height="20" uuid="300f414a-dc3d-4a39-a620-75905d398921"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{utilidadUnitaria}]]></textFieldExpression>
-			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="252" y="4" width="100" height="20" uuid="ebe84638-9323-4dd9-9fc8-f13ffe028502"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{ivaCompra}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{valorVentaPdcto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="439" y="5" width="71" height="20" uuid="aac334ee-76b4-4746-b64d-be403aab7bf4"/>
+				<reportElement x="402" y="2" width="123" height="20" uuid="1590e332-5013-4609-91b1-caac90270d7d"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{unidadesVendidas}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$#,##0">
+				<reportElement x="197" y="2" width="100" height="20" uuid="f23e2d2f-8beb-48c9-95a8-02a6f819d9ea"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{ivaCompra}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$#,##0">
+				<reportElement x="322" y="2" width="100" height="20" uuid="33b466ca-1ade-42ae-bf41-4d32cf2e16a6"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{ivaVenta}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$#,##0">
+				<reportElement x="456" y="2" width="100" height="20" uuid="7184dc0a-a043-471d-882c-a435fdd4a51c"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{utilidadUnitaria}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -213,16 +245,6 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 				</textElement>
 				<text><![CDATA[Total Utilidad:]]></text>
 			</staticText>
-			<textField pattern="$ #,##0">
-				<reportElement x="442" y="23" width="100" height="20" uuid="df908995-307d-4243-8798-60ac48ee8304"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
-			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="442" y="3" width="100" height="20" uuid="ef6804a8-649a-4431-bee5-6b4829a0a5ef"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{totalCompra}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="336" y="61" width="100" height="20" uuid="c80595ef-cabf-4f03-95d9-c2a1bd8ce55c"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -237,18 +259,28 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 				</textElement>
 				<text><![CDATA[Total Iva Compra:]]></text>
 			</staticText>
-			<textField pattern="$ #,##0">
-				<reportElement x="442" y="61" width="100" height="20" uuid="78411ca2-5eab-41c1-97a2-8758297f55a9"/>
+			<textField pattern="$#,##0">
+				<reportElement x="403" y="23" width="100" height="20" uuid="fae39c12-8713-40ab-a4d4-e687820eb8b6"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{totalIvaVenta}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
 			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="442" y="43" width="100" height="20" uuid="3aa0569b-edb1-4c45-b4df-7cd4575a4a4d"/>
+			<textField pattern="$#,##0">
+				<reportElement x="403" y="3" width="100" height="20" uuid="7870a742-04af-4748-9695-e691bf027809"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{totalCompra}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$#,##0">
+				<reportElement x="403" y="43" width="100" height="20" uuid="289308cd-a49b-4038-8380-6416f72a0d12"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{totalIvaCompra}]]></textFieldExpression>
 			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="442" y="81" width="100" height="20" uuid="28a64e7f-6d83-42a5-82b9-31acf98851fb"/>
+			<textField pattern="$#,##0">
+				<reportElement x="403" y="61" width="100" height="20" uuid="d87cd445-297b-4373-96fd-3320f1e96113"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{totalIvaVenta}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$#,##0">
+				<reportElement x="403" y="81" width="100" height="20" uuid="7abbcbcf-ce79-4982-b0fa-f90a99a767b0"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{utilidad}]]></textFieldExpression>
 			</textField>
