--- a/web/views/Cotizacion/Cotizacion.xhtml
+++ b/web/views/Cotizacion/Cotizacion.xhtml
@@ -58,7 +58,7 @@
                         </p:layout>
                         <h:panelGrid id="gridBuscarProducto" columns="3">
                             <p:outputLabel value="Código de Producto: " style="font-size: 16px; font-weight: bold"/>
-                            <p:inputText id="inpTexProducto" value="#{cotizacionBean.codigoProducto}" size="27" placeholder="Digite Código Producto" disabled="#{!cotizacionBean.enabled}" style="text-align: center; text-transform: uppercase">
+                            <p:inputText id="inpTexProducto" value="#{cotizacionBean.codigoProducto}" size="27" placeholder="Código Producto" disabled="#{!cotizacionBean.enabled}" style="text-align: center; text-transform: uppercase">
                                 <p:ajax event="keyup" delay="500" listener="#{cotizacionBean.mostrarDatosCantidadProductoPorCodigo()}" update=":formFacturaCotizacion:gridBuscarProducto"/>
                             </p:inputText>
                             <p:commandButton value="+" oncomplete="PF('dialogDatosProductos').show();" update=":formFacturaCotizacion:dialogProductos" disabled="#{!cotizacionBean.enabled}"/>
