--- a/web/views/Devoluciones/DevolucionCliente.xhtml
+++ b/web/views/Devoluciones/DevolucionCliente.xhtml
@@ -31,9 +31,9 @@
                                         <p:ajax event="keyup" delay="500" listener="#{devolucionClienteBean.agregarDatosPersonaPorIdentificacion()}" update=":formFacturaDevolucionCliente:gridDatosAcreedor :formFacturaDevolucionCliente:inpTexAcreedor"/>
                                     </p:inputText> 
                                     <p:commandButton value="+" oncomplete="PF('dialogDatosAcreedores').show();" update=":formFacturaDevolucionCliente:dialogAcreedores" disabled="#{!devolucionClienteBean.enabled}"/>
-                                    <p:outputLabel value="Pago: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:inputText id="inpTexFormaPago" size="20" placeholder="Credito/Contado"  converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center">
-                                        <p:ajax event="keyup" delay="500" update=":formFacturaDevolucionCliente:gridDatosAcreedor :formFacturaDevolucionCliente:inpTexFormaPago"/>
+                                    <p:outputLabel value="Observación: " style="font-size: 16px; font-weight: bold"/>
+                                    <p:inputText id="inpTexObservacion" size="36" placeholder="Ingrese Observación" converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center">
+                                        <p:ajax event="keyup" update=":formFacturaDevolucionCliente:gridDatosAcreedor :formFacturaDevolucionCliente:inpTexObservacion"/>
                                     </p:inputText> 
                                     <p:commandButton value="+" oncomplete="PF('dialogDatosAcreedores').show();" update=":formFacturaDevolucionCliente:dialogAcreedores" disabled="#{!devolucionClienteBean.enabled}"/>
                                     <p:outputLabel value="Fecha: " style="font-size: 16px; font-weight: bold"/>
@@ -58,7 +58,7 @@
                         </p:layout>
                         <h:panelGrid id="gridBuscarProducto" columns="3">
                             <p:outputLabel value="Código de Producto: " style="font-size: 16px; font-weight: bold"/>
-                            <p:inputText id="inpTexProducto" value="#{devolucionClienteBean.codigoProducto}" size="27" placeholder="Digite Código Producto" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center; text-transform: uppercase">
+                            <p:inputText id="inpTexProducto" value="#{devolucionClienteBean.codigoProducto}" size="27" placeholder="Código Producto" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center; text-transform: uppercase">
                                 <p:ajax event="keyup" delay="500" listener="#{devolucionClienteBean.mostrarDatosCantidadProductoPorCodigo()}" update=":formFacturaDevolucionCliente:gridBuscarProducto"/>
                             </p:inputText>
                             <p:commandButton value="+" oncomplete="PF('dialogDatosProductos').show();" update=":formFacturaDevolucionCliente:dialogProductos" disabled="#{!devolucionClienteBean.enabled}"/>
